allow number of questions and duration to be changed

--- a/frontend/src/components/ButtonGroup/ButtonGroup.module.css
+++ b/frontend/src/components/ButtonGroup/ButtonGroup.module.css
@@ -1,5 +1,11 @@
 @reference "tailwindcss";
 
+.container {
+  @apply flex;
+  @apply flex-wrap;
+  @apply gap-2;
+}
+
 .button {
   @apply text-left;
   @apply flex;
