--- a/frontend/src/views/AnswerView/components/PlayerAnswers/PlayerAnswers.module.css
+++ b/frontend/src/views/AnswerView/components/PlayerAnswers/PlayerAnswers.module.css
@@ -23,6 +23,16 @@
   @apply gap-2;
 }
 
+.hyphen {
+  @apply inline-flex;
+  @apply items-center;
+  @apply justify-center;
+  @apply w-5;
+  @apply h-5;
+  @apply rounded;
+  @apply bg-gray-600;
+}
+
 .check {
   @apply inline-flex;
   @apply items-center;
